[DOC] Make swagger doc for all api topic module
