# app/Http/Controllers/AircraftController.php
@@ -185,6 +185,82 @@ class AircraftController extends Controller
         }
     }
 
+    /**
+     * @OA\GET(
+     *     path="/api/aircraft",
+     *     summary="Show all aircraft module or combined API (all data & stats)",
+     *     tags={"Aircraft"},
+     *     @OA\Parameter(
+     *         name="limit_data_all",
+     *         in="query",
+     *         description="Limit the number of aircraft to show",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer",
+     *             default=20
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="order_data_all",
+     *         in="query",
+     *         description="Order the aircraft by ascending or descending",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *             enum={"asc", "desc"},
+     *             default="asc"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="search_data_all",
+     *         in="query",
+     *         description="Search term for filtering aircraft",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *             default="%20"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="limit_stats_by_role",
+     *         in="query",
+     *         description="Limit the number of role to show",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer",
+     *             default=7
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="limit_stats_by_country",
+     *         in="query",
+     *         description="Limit the number of country to show",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer",
+     *             default=7
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="limit_stats_by_manufacturer",
+     *         in="query",
+     *         description="Limit the number of manufacturer to show",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer",
+     *             default=7
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="aircraft module found"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal Server Error"
+     *     ),
+     * )
+     */
     public function getAircraftModule(Request $request){
         try {
             $data_all = json_decode(
